--- a/shopping/index.html
+++ b/shopping/index.html
@@ -59,7 +59,7 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img style="width: 80px; border-radius: 50%;"
-                    src="shopping/images/logo.png" alt="Image Not Found!"></a>
+                    src="buy-watch/shopping/images/logo.png" alt="Image Not Found!"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
