--- a/shopping/index.html
+++ b/shopping/index.html
@@ -5,8 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/shopping/fontawesome-free-6.4.2-web/css/all.min.css">
-    <link rel="shortcut icon" href="/shopping/images/shoppingLogo.png" type="image/x-icon">
+    <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.min.css">
+    <link rel="shortcut icon" href="images/shoppingLogo.png" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -59,7 +59,7 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img style="width: 80px; border-radius: 50%;"
-                    src="/images/logo.png" alt="Image Not Found!"></a>
+                    src="images/logo.png" alt="Image Not Found!"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -128,7 +128,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <a href="https:/google.com"><img src="/shopping/images/BTitanbanner.jpg" style="height: 500px;"
+                <a href="https:/google.com"><img src="images/BTitanbanner.jpg" style="height: 500px;"
                         class="d-block w-100" alt="..."></a>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 style="background-color: red; display: inline;
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <a href="https:/google.com"><img src="/shopping/images/TitanBanner2.png" style="height: 500px;"
+                <a href="https:/google.com"><img src="images/TitanBanner2.png" style="height: 500px;"
                         class="d-block w-100" alt="..."></a>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 style="background-color: red; display: inline;
@@ -144,7 +144,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <a href="https:/google.com"><img src="/shopping/images/SD_newarrivals_080523.png" style="height: 500px;"
+                <a href="https:/google.com"><img src="images/SD_newarrivals_080523.png" style="height: 500px;"
                         class="d-block w-100" alt="..."></a>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 style="background-color: red; display: inline;
@@ -152,7 +152,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <a href="https:/google.com"><img src="/shopping/images/SD_duniyadekhegi_170523.png"
+                <a href="https:/google.com"><img src="images/SD_duniyadekhegi_170523.png"
                         style="height: 500px;" class="d-block w-100" alt="..."></a>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 style="background-color: red; display: inline;
@@ -182,7 +182,7 @@
         <div class="row row-cols-2 row-cols-sm-4 g-4">
             <div class="col">
                 <div class="card">
-                    <img style="height: 300px;" src="/shopping/images/81sa6HPlKeL._SY679_.jpg" class="card-img-top"
+                    <img style="height: 300px;" src="images/81sa6HPlKeL._SY679_.jpg" class="card-img-top"
                         alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -195,7 +195,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img style="height: 300px;" src="/shopping/images/8992PP10W_4.png" class="card-img-top" alt="...">
+                    <img style="height: 300px;" src="images/8992PP10W_4.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -207,7 +207,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img style="height: 300px;" src="/shopping/images/SP80035QM01W_5.png" class="card-img-top"
+                    <img style="height: 300px;" src="images/SP80035QM01W_5.png" class="card-img-top"
                         alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -220,7 +220,7 @@
             </div>
             <div class="col">
                 <div class="card" max-width="500px">
-                    <img style="height: 300px;" src="/shopping/images/-original-imagnvwuy9bm8fpx.png"
+                    <img style="height: 300px;" src="images/-original-imagnvwuy9bm8fpx.png"
                         class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -311,7 +311,7 @@
                 <div class="col-lg-3 mb-3">
                     <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/"
                         aria-label="Bootstrap">
-                        <img src="/shopping/images/shoppingLogo.png" style="width: 80px; border-radius: 50%;" alt="">
+                        <img src="images/shoppingLogo.png" style="width: 80px; border-radius: 50%;" alt="">
                         <span class="text-light fs-5" style="margin-left: 10px;">Bootstrap</span>
                     </a>
                     <ul class="list-unstyled small text-muted">
