--- a/shopping/otherBrands.html
+++ b/shopping/otherBrands.html
@@ -5,8 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/shopping/fontawesome-free-6.4.2-web/css/all.min.css">
-    <link rel="shortcut icon" href="/shopping/images/shoppingLogo.png" type="image/x-icon">
+    <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.min.css">
+    <link rel="shortcut icon" href="images/shoppingLogo.png" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -31,7 +31,7 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img style="width: 80px; border-radius: 50%;"
-                    src="/shopping/images/logo.png" alt="Image Not Found!"></a>
+                    src="images/logo.png" alt="Image Not Found!"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -94,7 +94,7 @@
                 <div class="col-lg-3 mb-3">
                     <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/"
                         aria-label="Bootstrap">
-                        <img src="/shopping/images/shoppingLogo.png" style="width: 80px; border-radius: 50%;" alt="">
+                        <img src="images/shoppingLogo.png" style="width: 80px; border-radius: 50%;" alt="">
                         <span class="text-light fs-5" style="margin-left: 10px;">Bootstrap</span>
                     </a>
                     <ul class="list-unstyled small text-muted">
